[package]
name = "duckpowered_backend"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
rand = "0.8.5"
hex = "0.4.3"
ring = "0.17.8"
async-recursion = "1.0.4"
chrono = "0.4.24"
dirs = "5.0.1"
jwt = "0.16.0"
dotenv = "0.15.0"
hmac = "0.12.1"
sha2 = "0.10.8"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]
